Create endpoints for getting alerts for landlord, renter, contracts
